--- a/src/app/components/nav-bar-mobile/nav-bar-mobile.component.html
+++ b/src/app/components/nav-bar-mobile/nav-bar-mobile.component.html
@@ -4,7 +4,7 @@
     <mat-menu class="matMenu" #menu="matMenu">
       <button mat-menu-item><a class="button" routerLink="/about">About</a></button>
       <button mat-menu-item><a class="button" routerLink="/work">Work</a></button>
-      <button mat-menu-item><a class="button" routerLink="/">Undefined Aesthetic</a></button>
+      <button mat-menu-item><a class="button" routerLink="/home">Undefined Aesthetic</a></button>
       <button mat-menu-item><a class="button" routerLink="/projects">Projects</a></button>
       <button mat-menu-item><a class="button" routerLink="/contact">Contact</a></button>
     </mat-menu>
