--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <nav>
     <a class="button" routerLink="/about">About</a> 
     <a class="button" routerLink="/work">Work</a> 
-    <a class="button" routerLink="/">Undefined Aesthetic</a> 
+    <a class="button" routerLink="/home">Undefined Aesthetic</a> 
     <a class="button" routerLink="/projects">Projects</a>  
     <a class="button" routerLink="/contact">Contact</a>
   </nav>
