added snake game

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,6 @@
 <app-nav-bar-mobile></app-nav-bar-mobile>
 <div class="main__container">
   <h1>HomePage Works</h1>
-  <p>you will be looged out in <countdown [config]="{ leftTime: 59, format: 's' }"></countdown></p>
-
+  <app-snake-game></app-snake-game>
+  <!-- <p>you will be looged out in <countdown [config]="{ leftTime: 59, format: 's' }"></countdown></p> -->
 </div>
